--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-websockets==4.0.1
+bintrees==2.0.7
 certifi==2017.11.5
 chardet==3.0.4
 idna==2.6
-numpy==1.13.3
-pandas==0.21.0
-python-dateutil==2.6.1
-pytz==2017.3
-requests==2.18.4
-six==1.11.0
+requests==2.13.0
+six==1.10.0
 urllib3==1.22
+websocket-client==0.40.0
+websockets==4.0.1
